Adjusted placement of popups to fix overflow bug

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -34,9 +34,6 @@ a {
 
 #__next {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  & > *:nth-child(2) {
-    flex-grow: 1;
-  }
+  width: 100vw;
+  overflow: hidden;
 }
